cmake_minimum_required(VERSION 3.9)
project(MyLeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(MyLeetCode
        初级算法/字符串/01_Remove_Duplicates_from_Sorted_Array.cpp
        初级算法/字符串/02_Best_Time_to_Buy_and_Sell_Stock_II.cpp 初级算法/字符串/03_Rotate_Array.cpp 初级算法/字符串/04_Contains_Duplicate.cpp 初级算法/字符串/05_Single_Number.cpp "初级算法/字符串/06_Intersection_of_Two_Arrays_II.cpp" 初级算法/字符串/07_Plus_One.cpp 初级算法/字符串/08_Move_Zeroes.cpp)