cmake_minimum_required(VERSION 3.9)
project(MyLeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(MyLeetCode
        初级算法/数组/01_Remove_Duplicates_from_Sorted_Array.cpp
        初级算法/数组/02_Best_Time_to_Buy_and_Sell_Stock_II.cpp 初级算法/数组/03_Rotate_Array.cpp 初级算法/数组/04_Contains_Duplicate.cpp 初级算法/数组/05_Single_Number.cpp "初级算法/数组/06_Intersection_of_Two_Arrays_II.cpp" 初级算法/数组/07_Plus_One.cpp 初级算法/数组/08_Move_Zeroes.cpp 初级算法/数组/09_Two_Sum.cpp 初级算法/数组/10_Valid_Sudoku.cpp 初级算法/数组/11_Rotate_Image.cpp 初级算法/字符串/01_Reverse_String.cpp 初级算法/字符串/02_Reverse_Integer.cpp 初级算法/字符串/03_First_Unique_Character_in_a_String.cpp 初级算法/字符串/04_Valid_Anagram.cpp 初级算法/字符串/05_Valid_Palindrome.cpp "初级算法/字符串/06_String_to_Integer_(atoi).cpp" "初级算法/字符串/07_Implement_strStr().cpp" 初级算法/字符串/08_Count_and_Say.cpp 初级算法/字符串/09_Longest_Common_Prefix.cpp 初级算法/链表/01_Delete_Node_in_a_Linked_List.cpp 初级算法/链表/02_Remove_Nth_Node_From_End_of_List.cpp 初级算法/链表/03_Reverse_Linked_List.cpp)